# kursovaya_5_PostgreSQL

./: README.md  main.py  pyproject.toml
classes/: db_manager.py
src/: utils.py
tests/: test_utils.py
